connect to database

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,14 @@ next-env.d.ts
 
 # vscode
 .vscode
+.env*
+
+USE punch;
+
+CREATE TABLE `punch_test`(
+    `id` INT NOT NULL AUTO_INCREMENT PRIMARY KEY,
+    `group` VARCHAR(10) NOT NULL,
+    `name` VARCHAR(10) NOT NULL,
+    `date` VARCHAR(10) DEFAULT (DATE_FORMAT(CURRENT_DATE, '%Y/%m/%d')) NOT NULL,
+    `notes` VARCHAR(500) NOT NULL
+);
