--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "next": "13.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sharp": "^0.32.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -22,6 +21,7 @@
     "autoprefixer": "^10.4.14",
     "classnames": "^2.3.2",
     "postcss": "^8.4.23",
+    "prisma": "^4.13.0",
     "react-icons": "^4.8.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4"
