--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "13.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.32.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
