--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.0.0",
     "mongodb": "^5.3.0",
     "next": "13.3.1",
     "react": "18.2.0",
