--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "autoprefixer": "^10.4.14",
+    "chart.js": "^4.3.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "classnames": "^2.3.2",
     "postcss": "^8.4.23",
+    "react-chartjs-2": "^5.2.0",
     "react-icons": "^4.8.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4"
