--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "format": "prettier --plugin-search-dir . --write ."
   },
   "dependencies": {
     "mongodb": "^5.4.0",
@@ -23,6 +24,7 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "classnames": "^2.3.2",
     "postcss": "^8.4.23",
+    "prettier": "^2.8.8",
     "react-chartjs-2": "^5.2.0",
     "react-icons": "^4.8.0",
     "tailwindcss": "^3.3.2",
