--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "format": "prettier --plugin-search-dir . --write ."
   },
   "dependencies": {
-    "mongodb": "^5.4.0",
-    "next": "13.4.4",
+    "mongodb": "5.6.0",
+    "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zod": "^3.21.4"
+    "zod": "3.21.4"
   },
   "devDependencies": {
     "@types/node": "^18.16.1",
@@ -26,8 +26,8 @@
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
     "react-chartjs-2": "^5.2.0",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.9.0",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.3"
   }
 }
