--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   "dependencies": {
     "mongodb": "5.6.0",
     "next": "13.4.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "zod": "3.21.4"
   },
   "devDependencies": {
@@ -25,7 +23,9 @@
     "classnames": "^2.3.2",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
