--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "zod": "3.21.4"
   },
   "devDependencies": {
-    "@types/node": "^20.3.1",
+    "@cronitorio/cronitor-rum-nextjs": "^0.4.0",
+    "@types/node": "^20.3.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "autoprefixer": "^10.4.14",
@@ -28,6 +29,6 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.5"
   }
 }
