--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "format": "prettier --plugin-search-dir . --write ."
+    "format": "prettier --write ."
   },
   "dependencies": {
     "mongodb": "5.6.0",
@@ -14,7 +14,6 @@
     "zod": "3.21.4"
   },
   "devDependencies": {
-    "@cronitorio/cronitor-rum-nextjs": "^0.4.0",
     "@types/node": "^20.3.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
