--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "mongodb": "5.6.0",
-    "next": "13.4.7",
+    "mongodb": "^5.7.0",
+    "next": "^13.4.12",
     "zod": "3.21.4"
   },
   "devDependencies": {
-    "@types/node": "^20.3.2",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
+    "@types/node": "^20.4.5",
+    "@types/react": "^18.2.17",
+    "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.14",
-    "chart.js": "^4.3.0",
+    "chart.js": "^4.3.2",
     "chartjs-plugin-datalabels": "^2.2.0",
     "classnames": "^2.3.2",
-    "postcss": "^8.4.24",
-    "prettier": "^2.8.8",
+    "postcss": "^8.4.27",
+    "prettier": "^3.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.5"
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6"
   }
 }
