--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "mongodb": "^6.1.0",
-    "next": "^13.5.4"
+    "next": "^13.5.5"
   },
   "devDependencies": {
     "@types/node": "^20.8.6",
@@ -29,5 +29,11 @@
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
     "zod": "^3.22.4"
+  },
+  "prettier": {
+    "useTabs": false,
+    "singleQuote": false,
+    "trailingComma": "none",
+    "printWidth": 120
   }
 }
