--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "tailwindcss": "^3.3.3",
