--- a/package.json
+++ b/package.json
@@ -3,31 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "format": "prettier -c --write ."
   },
   "dependencies": {
     "mongodb": "^6.3.0",
-    "next": "^14.0.4"
+    "next": "^14.1.0"
   },
   "devDependencies": {
-    "@types/node": "^20.10.6",
-    "@types/react": "^18.2.46",
+    "@types/node": "^20.11.5",
+    "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.17",
     "chart.js": "^4.4.1",
     "chartjs-plugin-datalabels": "^2.2.0",
     "clsx": "^2.1.0",
-    "postcss": "^8.4.32",
-    "prettier": "^3.1.1",
+    "postcss": "^8.4.33",
+    "prettier": "^3.2.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
-    "tailwindcss": "^3.4.0",
+    "react-icons": "^5.0.1",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "zod": "^3.22.4"
   },
