--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "next": "^14.1.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.5",
+    "@codemirror/lang-markdown": "^6.2.4",
+    "@codemirror/language-data": "^6.4.0",
+    "@types/node": "^20.11.6",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@uiw/react-codemirror": "^4.21.21",
     "autoprefixer": "^10.4.17",
     "chart.js": "^4.4.1",
     "chartjs-plugin-datalabels": "^2.2.0",
     "clsx": "^2.1.0",
-    "framer-motion": "^10.18.0",
+    "framer-motion": "^11.0.3",
     "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "react": "^18.2.0",
@@ -28,6 +31,10 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-markdown": "^9.0.1",
+    "rehype-highlight": "^7.0.0",
+    "rehype-prism-plus": "^2.0.0",
+    "remark-gfm": "^4.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "zod": "^3.22.4"
