--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^20.11.6",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@uiw/codemirror-theme-vscode": "^4.21.21",
     "@uiw/react-codemirror": "^4.21.21",
     "autoprefixer": "^10.4.17",
     "chart.js": "^4.4.1",
