--- a/package.json
+++ b/package.json
@@ -9,24 +9,25 @@
     "format": "prettier -c --write ."
   },
   "dependencies": {
-    "mongodb": "^6.7.0",
-    "next": "^14.2.3"
+    "mongodb": "^6.8.0",
+    "next": "^14.2.4"
   },
   "devDependencies": {
     "@codemirror/lang-markdown": "^6.2.5",
     "@codemirror/language-data": "^6.5.1",
-    "@types/node": "^20.14.1",
+    "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@uiw/codemirror-theme-vscode": "^4.22.1",
-    "@uiw/react-codemirror": "^4.22.1",
+    "@types/telegram-web-app": "^7.2.1",
+    "@uiw/codemirror-theme-vscode": "^4.23.0",
+    "@uiw/react-codemirror": "^4.23.0",
     "autoprefixer": "^10.4.19",
     "chart.js": "^4.4.3",
     "chartjs-plugin-datalabels": "^2.2.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.2.10",
-    "postcss": "^8.4.38",
-    "prettier": "^3.3.0",
+    "framer-motion": "^11.2.13",
+    "postcss": "^8.4.39",
+    "prettier": "^3.3.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-confetti": "^6.1.0",
@@ -36,8 +37,8 @@
     "rehype-highlight": "^7.0.0",
     "rehype-prism-plus": "^2.0.0",
     "remark-gfm": "^4.0.0",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.3",
     "zod": "^3.23.8"
   },
   "prettier": {
