--- a/package.json
+++ b/package.json
@@ -9,36 +9,37 @@
     "format": "prettier -c --write ."
   },
   "dependencies": {
-    "mongodb": "^6.8.0",
-    "next": "^14.2.4"
+    "mongodb": "^6.8.1",
+    "next": "^14.2.9"
   },
   "devDependencies": {
     "@codemirror/lang-markdown": "^6.2.5",
     "@codemirror/language-data": "^6.5.1",
-    "@types/node": "^20.14.10",
-    "@types/react": "^18.3.3",
+    "@codemirror/view": "^6.33.0",
+    "@types/node": "^22.5.4",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@types/telegram-web-app": "^7.2.1",
-    "@uiw/codemirror-theme-vscode": "^4.23.0",
-    "@uiw/react-codemirror": "^4.23.0",
-    "autoprefixer": "^10.4.19",
-    "chart.js": "^4.4.3",
+    "@types/telegram-web-app": "^7.8.1",
+    "@uiw/codemirror-theme-vscode": "^4.23.1",
+    "@uiw/react-codemirror": "^4.23.1",
+    "autoprefixer": "^10.4.20",
+    "chart.js": "^4.4.4",
     "chartjs-plugin-datalabels": "^2.2.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.2.13",
-    "postcss": "^8.4.39",
-    "prettier": "^3.3.2",
+    "framer-motion": "^11.5.4",
+    "postcss": "^8.4.45",
+    "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "rehype-highlight": "^7.0.0",
     "rehype-prism-plus": "^2.0.0",
     "remark-gfm": "^4.0.0",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.3",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.6.2",
     "zod": "^3.23.8"
   },
   "prettier": {
