--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "format": "prettier -c --write ."
@@ -19,7 +19,6 @@
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
-    "@types/telegram-web-app": "^7.8.1",
     "@uiw/codemirror-theme-vscode": "^4.23.2",
     "@uiw/react-codemirror": "^4.23.2",
     "autoprefixer": "^10.4.20",
