--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "rehype-highlight": "^7.0.1",
