--- a/package.json
+++ b/package.json
@@ -21,15 +21,13 @@
     "@types/react-dom": "^18.3.1",
     "@uiw/codemirror-theme-vscode": "^4.23.6",
     "@uiw/react-codemirror": "^4.23.6",
+    "antd": "^5.21.6",
     "autoprefixer": "^10.4.20",
-    "chart.js": "^4.4.6",
-    "chartjs-plugin-datalabels": "^2.2.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.10",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
-    "react-chartjs-2": "^5.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
