refactor: update dependencies and improve note handling
- Updated package dependencies including Next.js, React, and TypeScript.
- Refactored note retrieval logic to prioritize archived notes and query the database only if the term is current.
- Enhanced the Note component with a copy-to-clipboard feature and improved styling for better user experience.
- Removed unused AI-related files and constants for cleaner codebase.
- Adjusted MarkdownRenderer to ensure proper rendering of content.

--- a/package.json
+++ b/package.json
@@ -7,45 +7,41 @@
     "build": "next build",
     "start": "next start",
     "archive": "tsx src/lib/notes/archiveNotes.ts",
-    "llm-ner": "tsx src/lib/ai/llm-ner/llm-ner.ts",
     "format": "prettier -c --write ."
   },
   "dependencies": {
-    "ai": "^4.1.59",
-    "chalk": "^5.4.1",
-    "mongodb": "^6.14.2",
-    "next": "^14.2.16",
-    "ollama-ai-provider": "^1.2.0"
+    "mongodb": "^6.16.0",
+    "next": "^15.3.2"
   },
   "devDependencies": {
     "@codemirror/lang-markdown": "^6.3.2",
     "@codemirror/language-data": "^6.5.1",
-    "@codemirror/view": "^6.36.4",
-    "@types/node": "^22.13.10",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@uiw/codemirror-theme-vscode": "^4.23.10",
-    "@uiw/react-codemirror": "^4.23.10",
-    "antd": "^5.24.3",
+    "@codemirror/view": "^6.36.8",
+    "@types/node": "^22.15.19",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
+    "@uiw/codemirror-theme-vscode": "^4.23.12",
+    "@uiw/react-codemirror": "^4.23.12",
+    "antd": "^5.25.1",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
-    "dotenv": "^16.4.7",
-    "framer-motion": "^12.5.0",
+    "dotenv": "^16.5.0",
+    "framer-motion": "^12.12.1",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
-    "react": "^18.3.1",
+    "react": "^19.1.0",
     "react-confetti": "^6.4.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "react-markdown": "^9.1.0",
+    "react-markdown": "^10.1.0",
     "rehype-highlight": "^7.0.2",
-    "rehype-prism-plus": "^2.0.0",
+    "rehype-prism-plus": "^2.0.1",
     "remark-gfm": "^4.0.1",
     "tailwindcss": "^3.4.14",
-    "tsx": "^4.19.3",
-    "typescript": "^5.8.2",
-    "zod": "^3.24.2"
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3",
+    "zod": "^3.24.4"
   },
   "prettier": {
     "useTabs": false,
