feat: add help document link to navbar and update Markdown example

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
     "start": "next start",
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
     "archive": "tsx src/lib/notes/archiveNotes.ts",
     "format": "prettier -c --write ."
   },
