--- a/package.json
+++ b/package.json
@@ -10,28 +10,29 @@
     "format": "prettier -c --write ."
   },
   "dependencies": {
-    "mongodb": "^6.20.0",
-    "next": "^15.5.5"
+    "mongodb": "^7.0.0",
+    "next": "^16.1.1"
   },
   "devDependencies": {
-    "@codemirror/lang-markdown": "^6.4.0",
-    "@codemirror/language-data": "^6.5.1",
-    "@codemirror/view": "^6.38.6",
-    "@types/node": "^24.7.2",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "@uiw/codemirror-theme-vscode": "^4.25.2",
-    "@uiw/react-codemirror": "^4.25.2",
-    "antd": "^5.27.5",
-    "autoprefixer": "^10.4.21",
+    "@codemirror/lang-markdown": "^6.5.0",
+    "@codemirror/language-data": "^6.5.2",
+    "@codemirror/view": "^6.39.8",
+    "@types/node": "^25.0.3",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@uiw/codemirror-theme-vscode": "^4.25.4",
+    "@uiw/react-codemirror": "^4.25.4",
+    "antd": "^6.1.3",
+    "autoprefixer": "^10.4.23",
+    "baseline-browser-mapping": "^2.9.11",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
-    "framer-motion": "^12.23.24",
+    "framer-motion": "^12.23.26",
     "postcss": "^8.5.6",
-    "prettier": "^3.6.2",
-    "react": "^19.2.0",
+    "prettier": "^3.7.4",
+    "react": "^19.2.3",
     "react-confetti": "^6.4.0",
-    "react-dom": "^19.2.0",
+    "react-dom": "^19.2.3",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
@@ -39,9 +40,9 @@
     "rehype-prism-plus": "^2.0.1",
     "remark-gfm": "^4.0.1",
     "tailwindcss": "^3.4.14",
-    "tsx": "^4.20.6",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "zod": "^4.1.12"
+    "zod": "^4.3.4"
   },
   "prettier": {
     "useTabs": false,
